--- a/E2P/E2P.csproj
+++ b/E2P/E2P.csproj
@@ -53,6 +53,9 @@
     <Compile Update="DatabaseInit.cs">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Compile>
+    <Compile Update="Views\SidebarTemplate.axaml.cs">
+      <DependentUpon>SidebarTemplate.axaml</DependentUpon>
+    </Compile>
   </ItemGroup>
 
   <ItemGroup>
