--- a/E2P/E2P.csproj
+++ b/E2P/E2P.csproj
@@ -36,6 +36,7 @@
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.1.0" />
     <PackageReference Include="Awesome.Net.WritableOptions" Version="3.0.0" />
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.1" />
+    <PackageReference Include="FluentAvaloniaUI" Version="2.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.8">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -52,6 +53,9 @@
   <ItemGroup>
     <Compile Update="DatabaseInit.cs">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Compile>
+    <Compile Update="Views\CompanyDialogWindow.axaml.cs">
+      <DependentUpon>CompanyDialogWindow.axaml</DependentUpon>
     </Compile>
     <Compile Update="Views\SidebarTemplate.axaml.cs">
       <DependentUpon>SidebarTemplate.axaml</DependentUpon>
